--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@next-auth/supabase-adapter": "^0.2.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "lucide-react": "^0.446.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
