feat: disable deployment on feature-branch

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,11 @@
     "env": {
       "NEXT_TELEMETRY_DISABLED": "1"
     }
+  },
+  "git": {
+    "deploymentEnabled": {
+      "feature-*": false,
+      "main": true
+    }
   }
 }
