--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NEXT_PUBLIC_APP_URL=http://localhost:3000 concurrently -n NEXT,BOT -c blue,magenta \"next dev\" \"node scripts/telegram-dev-bot.js || exit 0\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -32,6 +32,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vercel": "^44.7.0"
+    "vercel": "^44.7.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5"
   }
 }
