feat: email & repository cleanup

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ SUPABASE_SERVICE_KEY=your_supabase_service_key
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token
 TELEGRAM_CHAT_ID=your_telegram_chat_id
 ADMIN_TELEGRAM_ID=your_admin_telegram_id
+
+# Gmail Configuration
+GMAIL_USER=your-gmail@gmail.com
+GMAIL_APP_PASSWORD=your_app_password
+EMAIL_FROM_NAME=PGPals
