--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@supabase/supabase-js": "^2.45.4",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
+    "googleapis": "^156.0.0",
     "lucide-react": "^0.446.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/node-telegram-bot-api": "^0.64.7",
+    "@types/nodemailer": "^7.0.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
